# atlas

./: .gitignore  Cargo.toml
docs/: arch.drawio
ledger/: Cargo.toml  build.rs
ledger/src/: io.rs  lib.rs  transaction.rs
ledger/src/proto/: transaction.proto
src/: main.rs  transactions.rs
