[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
prost-types = "0.11"
uuid = {version="1.3.0", features=["v4","fast-rng","macro-diagnostics"]}

[build-dependencies]
prost-build = "0.5"